project2/test/test_11710204_7.out
Error type 7 at Line 8: binary operation on non-number variables
