project2/test/test_11710204_7.spl
struct Apple{
    int price;
};
int test_11710204_7()
{
  int a = 2;
  struct Apple apple;
  apple.price = apple + a;
  return a;
}

